fix(homepage): ensure text is not white on white bg on mobile

--- a/app/front_assets/stylesheets/pages/home.scss
+++ b/app/front_assets/stylesheets/pages/home.scss
@@ -28,6 +28,10 @@
     border-radius: $homepage-icon-size/2;
 
   }
+  .h1-home.text-white-sm,
+  .text-white-sm{
+    color: #fff;
+  }
   .h1-home{
     font-size: 48px;
     line-height: 58px;
